ref: refactor my account fragment xml

--- a/app/src/main/res/layout/fragment_my_account.xml
+++ b/app/src/main/res/layout/fragment_my_account.xml
@@ -18,36 +18,42 @@
 
             <com.google.android.material.imageview.ShapeableImageView
                 android:id="@+id/iv_userPhoto"
-                android:layout_width="120dp"
-                android:layout_height="120dp"
-                android:layout_marginTop="16dp"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:layout_marginTop="@dimen/medium_margin"
+                app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Full"
+                app:srcCompat="@drawable/mockphoto1"
+
+
                 android:scaleType="centerCrop"
-                app:layout_constraintDimensionRatio="16:9"
+
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Full"
-                app:srcCompat="@drawable/mockphoto1" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:id="@+id/floating_action_button"
-                style="?attr/floatingActionButtonSmallStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                style="?attr/floatingActionButtonSmallStyle"
+                app:srcCompat="@drawable/ic_edit"
+
                 android:layout_marginStart="-50dp"
-                android:layout_marginTop="-30dp"
+                android:layout_marginTop="-50dp"
                 android:contentDescription="@string/btn_edit_photo"
+
                 app:layout_constraintStart_toEndOf="@id/iv_userPhoto"
-                app:layout_constraintTop_toBottomOf="@id/iv_userPhoto"
-                app:srcCompat="@drawable/ic_edit" />
+                app:layout_constraintTop_toBottomOf="@id/iv_userPhoto" />
 
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:id="@+id/ll_editAccount"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/medium_margin"
+
                 android:gravity="center"
                 android:orientation="vertical"
+                android:layout_marginTop="@dimen/medium_margin"
+
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/floating_action_button">
 
@@ -56,43 +62,37 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
 
-                    app:mTitle="@string/email"
-                    app:mDescription=""
                     app:mIcon="@drawable/ic_me"
-
-                    tools:mDescription="andre@gmail.com"
-                    />
-
-                <com.andreesperanca.gymde.utils.custom.ConfigureCustomComponent
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-
                     app:mTitle="@string/name"
 
-                    app:mIcon="@drawable/ic_me"
-
-                    tools:mDescription="André Luiz Esperança Correia"
-                    />
+                    tools:mDescription="André Luiz Esperança Correia" />
 
                 <com.andreesperanca.gymde.utils.custom.ConfigureCustomComponent
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
 
+                    app:mIcon="@drawable/ic_email"
+                    app:mTitle="@string/email"
+
+                    tools:mDescription="andre@gmail.com" />
+
+                <com.andreesperanca.gymde.utils.custom.ConfigureCustomComponent
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+
+                    app:mIcon="@drawable/ic_weight"
                     app:mTitle="@string/weight"
-                    app:mIcon="@drawable/ic_me"
 
-                    app:mDescription="68"
-                    />
+                    app:mDescription="68"/>
 
                 <com.andreesperanca.gymde.utils.custom.ConfigureCustomComponent
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
 
+                    app:mIcon="@drawable/ic_height"
                     app:mTitle="@string/height"
-                    app:mIcon="@drawable/ic_me"
 
-                    tools:mDescription="178"
-                    />
+                    tools:mDescription="178" />
             </androidx.appcompat.widget.LinearLayoutCompat>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.appcompat.widget.LinearLayoutCompat>
