--- a/app/src/main/res/layout/edit_account_component.xml
+++ b/app/src/main/res/layout/edit_account_component.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:padding="16dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
@@ -14,22 +15,25 @@
         android:layout_height="24dp"/>
 
     <TextView
-        android:id="@+id/tv_workoutTitle"
+        android:id="@+id/tv_componentTitle"
         app:layout_constraintStart_toEndOf="@id/iv_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="@id/iv_icon"
         android:layout_marginStart="@dimen/medium_margin"
 
-        style="@style/TextAppearance.Material3.TitleMedium" />
+        style="@style/TextAppearance.Material3.TitleMedium"
+        tools:mTitle="Nome"/>
 
     <TextView
-        android:id="@+id/tv_description"
+        android:id="@+id/tv_componentDescription"
         app:layout_constraintStart_toEndOf="@id/iv_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/tv_workoutTitle"
-        app:layout_constraintStart_toStartOf="@id/tv_workoutTitle"
+
+        app:layout_constraintTop_toBottomOf="@id/tv_componentTitle"
+        app:layout_constraintStart_toStartOf="@id/tv_componentTitle"
+
         android:text="André Luiz Esperança Correia"
         style="@style/TextAppearance.Material3.BodySmall" />
 
