--- a/app/src/main/res/layout/my_workout_item.xml
+++ b/app/src/main/res/layout/my_workout_item.xml
@@ -3,44 +3,33 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
 
-    <com.google.android.material.imageview.ShapeableImageView
-        android:id="@+id/iv_workout"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+    android:padding="@dimen/small_margin"
+    >
 
-        android:layout_margin="@dimen/small_margin"
-        android:scaleType="centerCrop"
-        android:contentDescription="@string/image_workout"
-        tools:src="@drawable/mockphoto1"
-        app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.None"
-
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tv_workoutTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
-        app:layout_constraintTop_toTopOf="@id/iv_workout"
         android:layout_marginStart="@dimen/medium_margin"
 
         tools:text="@string/title_workout"
         style="@style/TextAppearance.Material3.TitleMedium"
 
-        app:layout_constraintStart_toEndOf="@id/iv_workout"/>
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/tv_workoutDay"
+        android:id="@+id/tv_workoutDescription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
         tools:text="@string/workout_day"
         style="@style/TextAppearance.Material3.BodySmall"
 
-        app:layout_constraintStart_toEndOf="@id/iv_workout"
         app:layout_constraintTop_toBottomOf="@id/tv_workoutTitle"
         app:layout_constraintStart_toStartOf="@id/tv_workoutTitle"/>
 
@@ -55,6 +44,6 @@
         android:contentDescription="@string/edit_workout"
 
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/iv_workout" />
+        app:layout_constraintTop_toTopOf="@id/tv_workoutTitle" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
