--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_navigation"
-    app:startDestination="@id/homeFragment">
+    app:startDestination="@id/workoutDetailsFragment">
 
     <fragment
         android:id="@+id/homeFragment"
@@ -20,4 +20,9 @@
         android:name="com.andreesperanca.gymde.ui.main.MyAccountFragment"
         android:label="fragment_my_account"
         tools:layout="@layout/fragment_my_account" />
+    <fragment
+        android:id="@+id/workoutDetailsFragment"
+        android:name="com.andreesperanca.gymde.WorkoutDetailsFragment"
+        android:label="fragment_workout_details"
+        tools:layout="@layout/fragment_workout_details" />
 </navigation>
