--- a/app/src/main/res/layout/fragment_workout_details.xml
+++ b/app/src/main/res/layout/fragment_workout_details.xml
@@ -24,7 +24,7 @@
         android:layout_height="wrap_content"
 
         android:layout_margin="@dimen/small_margin"
-        tools:text="Treino A"
+        android:text="@string/exercises"
         app:layout_constraintTop_toBottomOf="@id/tb_workoutToolbar"/>
 
     <androidx.recyclerview.widget.RecyclerView
