--- a/app/src/main/res/layout/fragment_new_exercise.xml
+++ b/app/src/main/res/layout/fragment_new_exercise.xml
@@ -61,8 +61,9 @@
         android:text="@string/add_photo" />
 
     <ImageView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:id="@+id/iv_exercisePhoto"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:layout_gravity="center"
         android:src="@drawable/ic_add_photo" />
 
