--- a/app/src/main/res/layout/fragment_login_home_screen.xml
+++ b/app/src/main/res/layout/fragment_login_home_screen.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 
-    android:background="@color/blue"
     android:orientation="vertical"
     tools:context=".ui.login_and_register.LoginHomeScreen">
 
@@ -15,47 +14,45 @@
 
         android:gravity="center"
         android:orientation="vertical"
-        app:layout_constraintVertical_bias="0.4"
-
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.4"
+        tools:layout_editor_absoluteX="0dp">
 
         <androidx.appcompat.widget.AppCompatImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/gymde_logo"
             android:contentDescription="@string/gymBrandLogo"
 
-            android:layout_gravity="center"/>
+            android:layout_gravity="center"
+            android:src="@drawable/gym_de_logo" />
 
-        <TextView
+        <com.google.android.material.textview.MaterialTextView
+            style="@style/TextAppearance.AppCompat.Display1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            style="@style/TextAppearance.AppCompat.Display1"
 
             android:text="@string/app_name"
-            android:textAlignment="center"
-            android:textColor="@color/white"/>
+            android:textAlignment="center" />
 
-
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_enter"
-            style="@style/Widget.Material3.Button.ElevatedButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            app:shapeAppearance="@style/ShapeAppearance.Material3.SmallComponent"
 
-            android:contentDescription="@string/enter"
-            android:layout_marginTop="@dimen/small_margin"
-            android:text="@string/enter"/>
+            android:layout_marginTop="@dimen/big_margin"
+            android:text="@string/enter" />
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_createAccount"
-            style="@style/Widget.Material3.Button.TextButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            style="@style/Widget.Material3.Button.TextButton"
 
             android:layout_marginTop="@dimen/small_margin"
-            android:textColor="@color/white"
-            android:text="@string/create_account"/>
+            android:text="@string/create_account" />
+
     </androidx.appcompat.widget.LinearLayoutCompat>
 </androidx.constraintlayout.widget.ConstraintLayout>
