--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,12 +4,14 @@
     <color name="blue">#034371</color>
     <color name="light_blue">#16648a</color>
     
-    <color name="red">#c90e17</color>
+
 
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
-    <color name="neon_green">#00FF00</color>
-
+    <color name="dark_blue">#007AFF</color>
+    <color name="light_green">#7CFC00</color>
+    <color name="orange">#FFA500</color>
+    <color name="red">#FF0000</color>
 
 </resources>
