--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,10 +1,11 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 
     <style name="Theme.GymDe" parent="Theme.Material3.Light.NoActionBar">
+
         <item name="colorPrimary">@color/dark_blue</item>
-        <item name="colorOnPrimary">@color/white</item>
-        <item name="textAppearanceLabelLarge">@style/TextAppearance.App.Button</item>
-        <item name="shapeAppearanceSmallComponent">@style/ShapeAppearance.App.SmallComponent</item>
+        
+        <item name="colorSecondary">@color/white</item>
+
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
     </style>
 
