--- a/app/src/main/res/layout/fragment_weight.xml
+++ b/app/src/main/res/layout/fragment_weight.xml
@@ -1,54 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
+
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
+    android:fillViewport="true"
+    android:orientation="vertical">
 
-    android:orientation="vertical"
-    tools:context=".ui.login_and_register.GenderFragment">
-
-    <com.google.android.material.textview.MaterialTextView
+    <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        style="@style/TextAppearance.Material3.TitleLarge"
+        android:orientation="vertical">
 
-        android:layout_marginBottom="@dimen/small_margin"
-        android:text="@string/what_is_your_weight"
-        android:textAlignment="center" />
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/til_weight"
-        android:layout_marginHorizontal="@dimen/big_margin"
-
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/weight">
-
-        <com.google.android.material.textfield.TextInputEditText
+        <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/tb_weightToolbar"
+            style="@style/Theme.GymDe.DefaultToolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="numberDecimal"/>
-    </com.google.android.material.textfield.TextInputLayout>
 
-    <com.google.android.material.progressindicator.LinearProgressIndicator
-        android:layout_width="100dp"
-        android:layout_height="50dp"
+            app:layout_constraintTop_toTopOf="parent" />
 
-        android:layout_marginTop="@dimen/small_margin"
-        android:progress="60"
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
 
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+            android:orientation="vertical"
+            tools:context=".ui.login_and_register.GenderFragment">
 
-    <Button
-        android:id="@+id/btn_advance"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+            <com.google.android.material.textview.MaterialTextView
+                style="@style/TextAppearance.Material3.TitleLarge"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
 
-        android:layout_marginTop="@dimen/small_margin"
-        android:text="@string/advance" />
-</androidx.appcompat.widget.LinearLayoutCompat>
+                android:layout_marginBottom="@dimen/small_margin"
+                android:text="@string/what_is_your_weight"
+                android:textAlignment="center" />
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/til_weight"
+                android:layout_width="match_parent"
+
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="@dimen/big_margin"
+                android:hint="@string/weight">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="numberDecimal" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.progressindicator.LinearProgressIndicator
+                android:layout_width="100dp"
+                android:layout_height="50dp"
+
+                android:layout_marginTop="@dimen/small_margin"
+                android:progress="60"
+
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <Button
+                android:id="@+id/btn_advance"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:layout_marginTop="@dimen/small_margin"
+                android:text="@string/advance" />
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
+    </androidx.appcompat.widget.LinearLayoutCompat>
+
+</ScrollView>
